--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.cells.min.js"
         integrity="sha512-ipaWmngfmwPrgmF/qAMVRKDlzM6KSmQIXTTFuDGltitPFDndMN02da4C6n2PyODzCpPHD0GSBDJjHSuLH+TKnQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -111,33 +111,43 @@
 
             <div class="menu">
                 <div class="slide">
-                    <div class="items">
-                        <div class="icon">
-                            <i class="fa-solid fa-clipboard"></i>
+                    <div class="item">
+                        <div class="items">
+                            <div class="icon">
+                                <i class="fa-solid fa-clipboard"></i>
+                            </div>
                         </div>
                         <span>pendaftaran</span>
-                    </div>  
-                    <div class="items">
-                        <div class="icon">
-                            <i class="fa-regular fa-square-check"></i>
+                    </div>
+                    <div class="item">
+                        <div class="items">
+                            <div class="icon">
+                                <i class="fa-regular fa-square-check"></i>
+                            </div>
                         </div>
                         <span>status registrasi</span>
                     </div>
-                    <div class="items">
-                        <div class="icon">
-                            <i class="fa-solid fa-money-bill"></i>
+                    <div class="item">
+                        <div class="items">
+                            <div class="icon">
+                                <i class="fa-solid fa-money-bill"></i>
+                            </div>
                         </div>
                         <span>biaya penanganan</span>
                     </div>
-                    <div class="items">
-                        <div class="icon">
-                            <i class="fa-solid fa-circle-info"></i>
+                    <div class="item">
+                        <div class="items">
+                            <div class="icon">
+                                <i class="fa-solid fa-circle-info"></i>
+                            </div>
                         </div>
                         <span>informasi jadwal</span>
                     </div>
-                    <div class="items">
-                        <div class="icon">
-                            <i class="fa-solid fa-clipboard-question"></i>
+                    <div class="item">
+                        <div class="items">
+                            <div class="icon">
+                                <i class="fa-solid fa-clipboard-question"></i>
+                            </div>
                         </div>
                         <span>faq</span>
                     </div>
