--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="carousel-inner">
                     <div class="items">
                         <div class="left">
-                            <h3>antiran jadwal</h3>
+                            <h3>antriran jadwal</h3>
                             <span>21704</span>
                         </div>
                         <i class="fa-solid fa-calendar-days"></i>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="items">
                         <div class="left">
-                            <h3>antiran verifikasi</h3>
+                            <h3>antriran verifikasi</h3>
                             <span>2</span>
                         </div>
                         <i class="fa-solid fa-layer-group"></i>
